# ALORE_Legged_Manipulator

./: README.md  config.yaml
Deployment/: config_real.yaml  object_arrangement_fsm.py
Deployment/B2_deploy/: config.py  deploy_real_b2z1_obj.py
Deployment/B2_deploy/common/: rotation_helper.py
Deployment/B2_deploy/configs/: b2z1.yaml
Deployment/B2_deploy/unitree_sdk2_python/unitree_sdk2py/test/client/: video_client_example.py
Deployment/Z1_deploy/: config.py  z1_control.py
Deployment/Z1_deploy/common/: rotation_helper.py
Deployment/Z1_deploy/z1_sdk/: CMakeLists.txt
Deployment/Z1_deploy/z1_sdk/include/unitree_arm_sdk/control/: unitreeArm.h
Deployment/perception/: apriltag_pose.py  env_perception_auto.py  env_perception_mocap.py  yolo_pose.py
Simulation/isaac_b2_controller/: b2z1_highlevel_controller.py
Simulation/isaac_b2_controller/b2z1/: b2z1_ctrl.py  b2z1_object_fsm.py  b2z1_ppo_cfg.py  b2z1_sensors.py
Simulation/isaac_b2_controller/cfg/: sim.yaml
Simulation/isaac_b2_controller/env/: sim_env.py  terrain.py  terrain_cfg.py
Simulation/isaac_b2_controller/ros1/: b2z1_ros1_bridge.py
Training/asset/: box.dae  table.dae
Training/b2z1_multiobj_wbc_gnn_plan/: __init__.py  b2z1_multiobj_wbc_gnn_plan_env_cfg.py  b2z1_multiobj_wbc_gnn_plan_env_train.py  low_level_model.py
Training/b2z1_multiobj_wbc_gnn_plan/agents/: rsl_rl_ppo_cfg.py
Training/b2z1_multiobj_wbc_gnn_plan/rsl_rl/: Physic_ppo.py  actor_critic_physic.py  interactive_gnn.py  on_policy_runner_physic.py  physic_estimator.py
planning_ddr_opt/back_end/: CMakeLists.txt  package.xml
planning_ddr_opt/back_end/config/: global_planning3ms.yaml  global_planning3ms_unknown.yaml
planning_ddr_opt/back_end/include/back_end/: optimizer.h
planning_ddr_opt/back_end/src/: optimizer.cpp
planning_ddr_opt/front_end/: CMakeLists.txt  package.xml
planning_ddr_opt/front_end/config/: jps3ms.yaml
planning_ddr_opt/front_end/include/front_end/jps_planner/: jps_planner.h
planning_ddr_opt/front_end/src/jps_planner/: jps_planner.cpp
planning_ddr_opt/icrekf/: CMakeLists.txt  package.xml
planning_ddr_opt/icrekf/include/icrekf/: icrekf.h
planning_ddr_opt/icrekf/src/: icrekf.cpp  icrekf_node.cpp
planning_ddr_opt/mpc_controller/: CMakeLists.txt  package.xml
planning_ddr_opt/mpc_controller/config/: mpc3ms_unknown.yaml
planning_ddr_opt/mpc_controller/include/mpc_controller/: mpc.h  traj_anal.hpp
planning_ddr_opt/mpc_controller/src/: mpc.cpp  mpc_node.cpp
planning_ddr_opt/nmpc_controller/: CMakeLists.txt  package.xml
planning_ddr_opt/nmpc_controller/UAV_CAR_model/: CMakeLists.txt  UAV_CAR_model_codegen
planning_ddr_opt/nmpc_controller/config/: mpc3ms_unknown.yaml
planning_ddr_opt/nmpc_controller/include/nmpc_controller/: mpc.h  mpc_wrapper.h  traj_anal.hpp
planning_ddr_opt/nmpc_controller/src/: mpc.cpp  mpc_node.cpp  mpc_wrapper.cpp
planning_ddr_opt/octomap/: CMakeLists.txt
planning_ddr_opt/octomap/lib/: liboctomap.so.1.10.0  liboctomath.so.1.10.0
planning_ddr_opt/octomap/lib/cmake/octomap/: octomap-config.cmake  octomap-targets.cmake
planning_ddr_opt/octomap/src/: CMakeLists.txt  Pointcloud.cpp  binvox2bt_unique_offsets.cpp  merge_octomaps.cpp  pcd_to_bt_example.cpp
planning_ddr_opt/others/UAV_CAR_model/: UAV_CAR_model.cpp
planning_ddr_opt/plan_manager/: CMakeLists.txt  package.xml
planning_ddr_opt/plan_manager/config/: car3ms.yaml  car3ms_unknown.yaml
planning_ddr_opt/plan_manager/include/plan_manager/: branch_and_bound.hpp  plan_manager.hpp
planning_ddr_opt/plan_manager/include/visualizer/: visualizer.hpp
planning_ddr_opt/plan_manager/launch/: planner_sim.launch
planning_ddr_opt/plan_manager/plotjuggler/: record.xml
planning_ddr_opt/plan_manager/rviz/: planner_sim.rviz
planning_ddr_opt/plan_manager/src/: global_planning.cpp
planning_ddr_opt/plan_tester/: CMakeLists.txt  package.xml
planning_ddr_opt/plan_tester/config/: car3ms.yaml
planning_ddr_opt/plan_tester/include/plan_tester/: hungarian.hpp  plan_tester.hpp
planning_ddr_opt/plan_tester/include/visualizer/: visualizer.hpp
planning_ddr_opt/plan_tester/launch/: planner_sim.launch
planning_ddr_opt/plan_tester/plotjuggler/: plotjuggler.xml
planning_ddr_opt/plan_tester/rviz/: benchmark.rviz  planner_sim.rviz
planning_ddr_opt/plan_tester/src/: global_planning.cpp  mission_validation_node.cpp
planning_ddr_opt/utils/carstatemsgs/: CMakeLists.txt  package.xml
planning_ddr_opt/utils/carstatemsgs/msg/: CarControl.msg  CarState.msg  Polynome.msg  SimulatedCarState.msg
planning_ddr_opt/utils/laser_simulator/: CMakeLists.txt  package.xml
planning_ddr_opt/utils/laser_simulator/config/: map.yaml  normal_laser.yaml  perspective_laser.yaml
planning_ddr_opt/utils/laser_simulator/launch/: params.yaml
planning_ddr_opt/utils/laser_simulator/src/: laser_sim_node.cpp
planning_ddr_opt/utils/plan_env/: CMakeLists.txt  package.xml
planning_ddr_opt/utils/plan_env/config/: IADC_V2_plan.pcd  iadc_whole_v4.pcd  iadc_whole_v5.pcd  idac_v3_whole.pcd  lab_v1.pcd  lab_v1_revise.pcd  library.pcd  mapsim.yaml  obj_2_pcd.py  obs_exam3.yaml  office.pcd  spiral.yaml  warehouse.pcd
planning_ddr_opt/utils/plan_env/include/plan_env/: sdf_map.h
planning_ddr_opt/utils/plan_env/src/: sdf_map.cpp  sdf_map_exam_node.cpp
planning_ddr_opt/utils/simulator/: CMakeLists.txt  package.xml
planning_ddr_opt/utils/simulator/include/simulator/: global_map.h  simulator.h
planning_ddr_opt/utils/simulator/src/: global_map.cpp  simulator.cpp
planning_ddr_opt/utils/simulator/urdf/b2_z1/meshes/: base_nolidar.stl
planning_ddr_opt/utils/simulator/urdf/b2_z1/urdf/: b2_plus_z1.urdf  b2_plus_z1_nolidar.urdf  b2_plus_z1_sim.urdf
planning_ddr_opt/utils/simulator/urdf/b2_z1/urdf/b2_plus_z1/: b2_plus_z1.usd  b2_plus_z1_base.usd
planning_ddr_opt/utils/simulator/urdf/b2_z1/urdf/b2_plus_z1/configuration/: b2_plus_z1_physics.usd
